Add new rejection reasons to German and English lists
Expanded the reasons.de.json and reasons.en.json files with numerous new entries providing additional ways to express rejection. This enhances the variety and nuance of available responses in both languages.

--- a/data/reasons.de.json
+++ b/data/reasons.de.json
@@ -376,5 +376,160 @@
   "Ich priorisiere nachhaltigen Output.",
   "Das würde über sichere Grenzen hinausgehen.",
   "Die Verpflichtung passt nicht zur Strategie.",
-  "Ich sage nein, um die Ausführung zu schützen."
+  "Ich sage nein, um die Ausführung zu schützen.",
+  "Mein Kalender hat Selbstbewusstsein erlangt und sagt nein.",
+  "Das übersteigt meine tägliche Toleranz für Chaos.",
+  "Die Idee kam an, nachdem meine Geduld gegangen war.",
+  "Ich habe bereits mein letztes Ersatz-Neuron ausgegeben.",
+  "Das Timing kollidiert mit meinen Erholungsplänen.",
+  "Meine interne Roadmap hat keine Spur dafür.",
+  "Das würde Begeisterung erfordern, die ich nicht beschaffen kann.",
+  "Das Risikolevel ist als unnötig klassifiziert.",
+  "Mir fehlt gerade die Durchhaltekraft.",
+  "Der Plan setzt eine Version von mir voraus, die nicht existiert.",
+  "Das würde das empfindliche Gleichgewicht des Nicht-Panischwerdens stören.",
+  "Mein Aufmerksamkeitsbudget ist bankrott.",
+  "Die Aufwandskurve sieht aus wie eine Klippe.",
+  "Ich spare Energie für unvermeidliche Dinge.",
+  "Das führt mehr Fragen als Antworten ein.",
+  "Der Scope ist allergisch gegen Grenzen.",
+  "Ich habe meine maximal akzeptable Komplexität erreicht.",
+  "Der Vorschlag verlangt mehr Klarheit als er bietet.",
+  "Meine Geduld läuft auf einer älteren Version.",
+  "Das kollidiert mit meinem langfristigen Vernunftsplan.",
+  "Ich trage bereits zu viele lose Enden mit mir.",
+  "Der Zeitplan gehört in die Kategorie spekulative Fiktion.",
+  "Das würde ständige Wachsamkeit erfordern.",
+  "Ich bin in einem Keine-neuen-Verpflichtungen-Fenster.",
+  "Der Plan fügt Gewicht ohne Richtung hinzu.",
+  "Mein Stresspuffer ist aufgebraucht.",
+  "Das würde einen Wartungs-Alptraum einführen.",
+  "Ich priorisiere Dinge mit einem Endpunkt.",
+  "Der Idee fehlt ein überzeugender Vorteil.",
+  "Mein Fokus ist für bestehende Brände reserviert.",
+  "Das würde mentale Fragmentierung erhöhen.",
+  "Der Vorschlag ignoriert Erholungszeit.",
+  "Ich arbeite mit begrenzter Reservekapazität.",
+  "Das würde verkomplizieren, was endlich einfach ist.",
+  "Meine internen Alarmglocken sind synchronisiert.",
+  "Die Kosten sind zu viel unsichtbare Arbeit.",
+  "Ich bin bereits über die Komfortzone hinaus gestreckt.",
+  "Das erfordert mehr Koordination als machbar.",
+  "Der Plan hat zu viele Unbekannte.",
+  "Ich fokussiere mich auf Ausführung, nicht Expansion.",
+  "Das würde Aufmerksamkeit vom Wesentlichen abziehen.",
+  "Mein Workload-Gleichgewicht würde zusammenbrechen.",
+  "Der Vorschlag fügt überall Reibung hinzu.",
+  "Ich verkleinere bewusst meinen Scope.",
+  "Das würde Verpflichtungen endlos verlängern.",
+  "Meine Energiekurve zeigt nach unten.",
+  "Die Idee kollidiert mit meinen aktuellen Prioritäten.",
+  "Ich wähle Eindämmung über Wachstum.",
+  "Das würde bestehende Engpässe verstärken.",
+  "Meine Bandbreitenprognose ist pessimistisch.",
+  "Der Plan setzt unendliches Kontextwechseln voraus.",
+  "Ich schütze meinen verbleibenden Fokus.",
+  "Das würde die Qualität woanders aushöhlen.",
+  "Dem Vorschlag fehlt eine klare Ziellinie.",
+  "Ich halte ein nachhaltiges Tempo.",
+  "Das würde einfache Aufgaben in Projekte verwandeln.",
+  "Meine Kapazitätsplanung hat ein Veto eingelegt.",
+  "Der Trade-off ist die Ablenkung nicht wert.",
+  "Ich manage bereits genug bewegliche Teile.",
+  "Das würde den Overhead still und leise aufblähen.",
+  "Meine Aufmerksamkeit ist bereits vollständig vergeben.",
+  "Der Plan erzeugt mehr Follow-ups als Ergebnisse.",
+  "Ich priorisiere Tiefe über Breite.",
+  "Das würde den aktuellen Fortschritt destabilisieren.",
+  "Meine Toleranz für Mehrdeutigkeit ist ausgereizt.",
+  "Der Vorschlag fügt Komplexität ohne Hebelwirkung hinzu.",
+  "Ich wähle, kognitives Rauschen zu reduzieren.",
+  "Das würde den Fokus über seine Grenzen hinaus strecken.",
+  "Mein Workload-Spielraum ist effektiv null.",
+  "Die Idee konkurriert mit wirkungsvollerer Arbeit.",
+  "Ich erzwinge gerade strengere Einschränkungen.",
+  "Das würde alles andere verlangsamen.",
+  "Meine aktuelle Phase erlaubt das nicht.",
+  "Der Plan setzt Best-Case-Energielevel voraus.",
+  "Ich vermeide absichtlich neue Abhängigkeiten.",
+  "Das würde den Koordinationswiderstand erhöhen.",
+  "Mein mentaler Stack ist bereits zu tief.",
+  "Der Vorschlag rechtfertigt den Aufwand nicht.",
+  "Ich schütze mich vor unnötiger Erschöpfung.",
+  "Das würde die Aufmerksamkeit zu weit verwässern.",
+  "Meine Prioritäten sind bereits festgelegt.",
+  "Der Plan lädt zur Scope-Erweiterung ein.",
+  "Ich optimiere auf Fertigstellung.",
+  "Das würde langfristige Verpflichtungen schaffen.",
+  "Meine Workload-Kurve ist bereits steil.",
+  "Der Idee fehlt ein verhältnismäßiger Ertrag.",
+  "Ich fokussiere mich auf das bereits Zugesagte.",
+  "Das würde mehr Management als Wert hinzufügen.",
+  "Meine Aufmerksamkeitsökonomie kann das nicht unterstützen.",
+  "Der Vorschlag erhöht die Fragilität.",
+  "Ich wähle Vorhersehbarkeit.",
+  "Das würde Lieferfristen verkomplizieren.",
+  "Meine aktuellen Verantwortlichkeiten lassen keinen Spielraum.",
+  "Der Plan überschätzt die verfügbare Kapazität.",
+  "Ich minimiere zukünftige Aufräumarbeiten.",
+  "Das würde stillen Stress einführen.",
+  "Meine Ausführungsbandbreite ist vollständig ausgelastet.",
+  "Die Idee passt nicht zur aktuellen Strategie.",
+  "Ich limitiere aktiv neue Inputs.",
+  "Das würde den etablierten Flow stören.",
+  "Meine Workload-Toleranz wurde überschritten.",
+  "Dem Vorschlag fehlen ausreichende Einschränkungen.",
+  "Ich priorisiere weniger aktive Threads.",
+  "Das würde Kontextverlust erhöhen.",
+  "Mein Terminplan kann keine weitere Verpflichtung absorbieren.",
+  "Der Plan tauscht Klarheit gegen Ambition.",
+  "Ich wähle Stabilität.",
+  "Das würde bestehendes Momentum untergraben.",
+  "Meine kognitive Last ist bereits hoch.",
+  "Die Idee erzeugt mehr Kanten zum Managen.",
+  "Ich schütze die Lieferqualität.",
+  "Das würde über vernünftigen Aufwand hinausgehen.",
+  "Mein aktueller Fokus ist nicht verhandelbar.",
+  "Der Vorschlag fügt mehr hinzu als er entfernt.",
+  "Ich sage absichtlich nein zu Extras.",
+  "Das würde vermeidbare Komplexität einführen.",
+  "Mein Kapazitätspuffer ist aufgebraucht.",
+  "Der Plan setzt ideale Koordination voraus.",
+  "Ich halte strikte Prioritätskontrolle.",
+  "Das würde langfristige Effektivität aushöhlen.",
+  "Meine Bandbreite ist bereits vollständig zugeteilt.",
+  "Die Idee verlangt fortlaufende Aufmerksamkeit.",
+  "Ich spare Ressourcen für das Wesentliche.",
+  "Das würde den operativen Widerstand erhöhen.",
+  "Meine aktuellen Verpflichtungen haben Vorrang.",
+  "Dem Vorschlag fehlt zeitliche Abstimmung.",
+  "Ich wähle Zurückhaltung über Reichweite.",
+  "Das würde die Ausführung zu dünn strecken.",
+  "Mein Fokus-Fenster ist bereits gebucht.",
+  "Der Plan erhöht die Wartungslast.",
+  "Ich verhindere aktiv Überlastung.",
+  "Das würde bestehende Ergebnisse gefährden.",
+  "Meine Workload-Obergrenze wurde erreicht.",
+  "Die Idee passt nicht zu Kapazitätsrealitäten.",
+  "Ich priorisiere nachhaltigen Fortschritt.",
+  "Das würde anhaltende Ablenkung einführen.",
+  "Meine aktuelle Zuweisung verbietet Expansion.",
+  "Der Vorschlag erzeugt mehr Arbeit als Wert.",
+  "Ich schütze langfristigen Fokus.",
+  "Das würde sichere Betriebsgrenzen überschreiten.",
+  "Meine Prioritäten erlauben das nicht.",
+  "Der Plan fügt unnötigen Druck hinzu.",
+  "Ich wähle Effektivität über Volumen.",
+  "Das würde die Ausführungsqualität verwässern.",
+  "Meine Bandbreite ist woanders reserviert.",
+  "Die Idee kollidiert mit Lieferzielen.",
+  "Ich verengen absichtlich den Scope.",
+  "Das würde kritische Pfade verlangsamen.",
+  "Meine aktuelle Last ist nicht erweiterbar.",
+  "Der Vorschlag erhöht Koordinationskosten.",
+  "Ich fokussiere mich auf einen starken Abschluss.",
+  "Das würde laufenden Overhead erzeugen.",
+  "Meine Kapazitätsplanung sagt ablehnen.",
+  "Der Plan passt nicht zum Moment.",
+  "Ich wähle, mich nicht zu überdehnen."
 ]
