--- a/data/reasons.en.json
+++ b/data/reasons.en.json
@@ -376,5 +376,160 @@
   "I’m prioritizing sustainable output.",
   "This would push beyond safe margins.",
   "The commitment doesn’t fit the strategy.",
-  "I’m saying no to protect execution."
+  "I’m saying no to protect execution.",
+  "My calendar has achieved self-awareness and says no.",
+  "This exceeds my daily tolerance for chaos.",
+  "The idea arrived after my patience left.",
+  "I’ve already spent my last spare neuron.",
+  "The timing conflicts with my plans to recover.",
+  "My internal roadmap has no lane for this.",
+  "This would require enthusiasm I can’t source.",
+  "The risk level is classified as unnecessary.",
+  "I’m currently short on follow-through.",
+  "The plan assumes a version of me that doesn’t exist.",
+  "This would upset the delicate balance of not panicking.",
+  "My attention budget is bankrupt.",
+  "The effort curve looks like a cliff.",
+  "I’m preserving energy for unavoidable things.",
+  "This introduces more questions than answers.",
+  "The scope is allergic to boundaries.",
+  "I’ve reached my maximum acceptable complexity.",
+  "The proposal demands more clarity than it offers.",
+  "My patience is running an older version.",
+  "This collides with my long-term sanity plan.",
+  "I’m already carrying too many loose ends.",
+  "The timeline belongs in speculative fiction.",
+  "This would require constant vigilance.",
+  "I’m in a no-new-obligations window.",
+  "The plan adds weight without direction.",
+  "My stress buffer has been depleted.",
+  "This would introduce a maintenance nightmare.",
+  "I’m prioritizing things with an endpoint.",
+  "The idea lacks a convincing upside.",
+  "My focus is reserved for existing fires.",
+  "This would increase mental fragmentation.",
+  "The proposal ignores recovery time.",
+  "I’m operating with limited spare capacity.",
+  "This would complicate what’s finally simple.",
+  "My internal alarm bells are synchronized.",
+  "The cost is too much invisible work.",
+  "I’m already stretched beyond comfort.",
+  "This requires more coordination than feasible.",
+  "The plan has too many unknowns.",
+  "I’m focusing on execution, not expansion.",
+  "This would siphon attention from essentials.",
+  "My workload equilibrium would collapse.",
+  "The proposal adds friction everywhere.",
+  "I’m deliberately shrinking my scope.",
+  "This would extend obligations indefinitely.",
+  "My energy curve is trending downward.",
+  "The idea conflicts with my current priorities.",
+  "I’m choosing containment over growth.",
+  "This would amplify existing bottlenecks.",
+  "My bandwidth forecast is pessimistic.",
+  "The plan assumes infinite context switching.",
+  "I’m protecting my remaining focus.",
+  "This would erode quality elsewhere.",
+  "The proposal lacks a clear finish line.",
+  "I’m maintaining a sustainable tempo.",
+  "This would turn simple tasks into projects.",
+  "My capacity planning vetoed it.",
+  "The trade-off is not worth the distraction.",
+  "I’m already managing enough moving parts.",
+  "This would inflate overhead quietly.",
+  "My attention is already fully spoken for.",
+  "The plan creates more follow-ups than outcomes.",
+  "I’m prioritizing depth over breadth.",
+  "This would destabilize current progress.",
+  "My tolerance for ambiguity is maxed out.",
+  "The proposal adds complexity without leverage.",
+  "I’m choosing to reduce cognitive noise.",
+  "This would stretch focus past its limits.",
+  "My workload margin is effectively zero.",
+  "The idea competes with higher-impact work.",
+  "I’m enforcing stricter constraints right now.",
+  "This would slow down everything else.",
+  "My current phase doesn’t allow for this.",
+  "The plan assumes best-case energy levels.",
+  "I’m intentionally avoiding new dependencies.",
+  "This would increase coordination drag.",
+  "My mental stack is already too deep.",
+  "The proposal doesn’t justify the effort.",
+  "I’m guarding against unnecessary fatigue.",
+  "This would dilute attention too widely.",
+  "My priorities are already locked in.",
+  "The plan invites scope expansion.",
+  "I’m optimizing for completion.",
+  "This would create long-term obligations.",
+  "My workload curve is already steep.",
+  "The idea lacks proportional return.",
+  "I’m focusing on what’s already committed.",
+  "This would add more management than value.",
+  "My attention economy can’t support this.",
+  "The proposal increases fragility.",
+  "I’m choosing predictability.",
+  "This would complicate delivery timelines.",
+  "My current responsibilities leave no slack.",
+  "The plan overestimates available capacity.",
+  "I’m minimizing future clean-up work.",
+  "This would introduce silent stress.",
+  "My execution bandwidth is fully utilized.",
+  "The idea doesn’t fit the current strategy.",
+  "I’m actively limiting new inputs.",
+  "This would disrupt established flow.",
+  "My workload tolerance has been exceeded.",
+  "The proposal lacks sufficient constraints.",
+  "I’m prioritizing fewer active threads.",
+  "This would increase context loss.",
+  "My schedule can’t absorb another commitment.",
+  "The plan trades clarity for ambition.",
+  "I’m choosing stability.",
+  "This would undermine existing momentum.",
+  "My cognitive load is already high.",
+  "The idea creates more edges to manage.",
+  "I’m protecting delivery quality.",
+  "This would extend beyond reasonable effort.",
+  "My current focus is non-negotiable.",
+  "The proposal adds more than it removes.",
+  "I’m intentionally saying no to extras.",
+  "This would introduce avoidable complexity.",
+  "My capacity buffer is gone.",
+  "The plan assumes ideal coordination.",
+  "I’m maintaining strict priority control.",
+  "This would erode long-term effectiveness.",
+  "My bandwidth is already fully allocated.",
+  "The idea demands ongoing attention.",
+  "I’m conserving resources for essentials.",
+  "This would increase operational drag.",
+  "My current commitments take precedence.",
+  "The proposal lacks timing alignment.",
+  "I’m choosing restraint over reach.",
+  "This would stretch execution too thin.",
+  "My focus window is already booked.",
+  "The plan increases maintenance burden.",
+  "I’m actively preventing overload.",
+  "This would compromise existing outcomes.",
+  "My workload ceiling has been reached.",
+  "The idea doesn’t fit capacity realities.",
+  "I’m prioritizing sustainable progress.",
+  "This would introduce persistent distraction.",
+  "My current allocation forbids expansion.",
+  "The proposal creates more work than value.",
+  "I’m protecting long-term focus.",
+  "This would exceed safe operating limits.",
+  "My priorities don’t allow for this.",
+  "The plan adds unnecessary pressure.",
+  "I’m choosing effectiveness over volume.",
+  "This would dilute execution quality.",
+  "My bandwidth is reserved elsewhere.",
+  "The idea conflicts with delivery goals.",
+  "I’m intentionally narrowing scope.",
+  "This would slow critical paths.",
+  "My current load is non-expandable.",
+  "The proposal increases coordination costs.",
+  "I’m focusing on finishing strong.",
+  "This would create ongoing overhead.",
+  "My capacity planning says decline.",
+  "The plan doesn’t fit the moment.",
+  "I’m choosing not to overextend."
 ]
